--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,14 @@
 {
-  "name": "web-poi",
+  "name": "web-point-of-interest",
   "version": "1.0.0",
+  "description": "Poin of Interest",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=dev nuxt",
+    "build": "cross-env HOST=0.0.0.0 PORT=3001 NODE_ENV=prod nuxt build",
+    "start": "cross-env HOST=0.0.0.0 PORT=3001 NODE_ENV=prod nuxt start",
+    "generate": "cross-env NODE_ENV=prod nuxt generate"
+  },
+  "author": "Duy <nguyenducduy.it@gmail.com>",
   "dependencies": {
     "@johmun/vue-tags-input": "^1.5.4",
     "@kazupon/vue-i18n-loader": "^0.3.0",
@@ -45,12 +53,6 @@
     "vuex-class": "^0.3.0",
     "webpack": "^3.10.0",
     "yaml-loader": "^0.5.0"
-  },
-  "scripts": {
-    "dev": "cross-env NODE_ENV=dev nuxt",
-    "build": "cross-env HOST=0.0.0.0 PORT=80 NODE_ENV=prod nuxt build",
-    "start": "cross-env HOST=0.0.0.0 PORT=80 NODE_ENV=prod nuxt start",
-    "generate": "cross-env NODE_ENV=prod nuxt generate"
   },
   "devDependencies": {
     "@types/node": "^9.4.0",
